--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>World Clock</title>
   </head>
   <body>
+    <h1>World Clock</h1>
     <footer class="signature">
       <p>
         This project was coded by
