--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="wrapper">
+      <h1>World Clock</h1>
+      <select name="" id="">
+        <option value="">Select a city</option>
+        <option value="london">London</option>
+        <option value="vancouver">Vancouver</option>
+        <option value="adelaide">Adelaide</option>
+      </select>
+      <div class="city">
+        <h2>London</h2>
+        <div class="date">15th August 2024</div>
+        <div class="time">1:58 AM</div>
+      </div>
+      <div class="city">
+        <h2>Vancouver</h2>
+        <div class="date">15th August 2024</div>
+        <div class="time">1:58 AM</div>
+      </div>
+      <div class="city">
+        <h2>Adelaide</h2>
+        <div class="date">15th August 2024</div>
+        <div class="time">1:58 AM</div>
+      </div>
+    </div>
     <footer class="signature">
       <p>
         This project was coded by
