Started CSS - styled wrapper, layout, text

--- a/index.html
+++ b/index.html
@@ -16,19 +16,11 @@
         <option value="adelaide">Adelaide</option>
       </select>
       <div class="city">
-        <h2>London</h2>
-        <div class="date">15th August 2024</div>
-        <div class="time">1:58 AM</div>
-      </div>
-      <div class="city">
-        <h2>Vancouver</h2>
-        <div class="date">15th August 2024</div>
-        <div class="time">1:58 AM</div>
-      </div>
-      <div class="city">
-        <h2>Adelaide</h2>
-        <div class="date">15th August 2024</div>
-        <div class="time">1:58 AM</div>
+        <div class="city-date">
+          <h2>London</h2>
+          <div class="date">15th August 2024</div>
+        </div>
+        <div class="time">1:58 <span class="am-pm">AM</span></div>
       </div>
     </div>
     <footer class="signature">
