--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
         </div>
         <div class="time">1:58 <span class="am-pm">AM</span></div>
       </div>
+      <div class="city">
+        <div class="city-date">
+          <h2>Vancouver</h2>
+          <div class="date">15th August 2024</div>
+        </div>
+        <div class="time">1:58 <span class="am-pm">AM</span></div>
+      </div>
+      <div class="city">
+        <div class="city-date">
+          <h2>Adelaide</h2>
+          <div class="date">15th August 2024</div>
+        </div>
+        <div class="time">1:58 <span class="am-pm">AM</span></div>
+      </div>
     </div>
     <footer class="signature">
       <p>
