--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.46/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="style.css" />
     <title>World Clock</title>
   </head>
@@ -15,26 +17,19 @@
         <option value="vancouver">Vancouver</option>
         <option value="adelaide">Adelaide</option>
       </select>
-      <div class="city">
+      <div class="city" id="london">
         <div class="city-date">
           <h2>London</h2>
-          <div class="date">15th August 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:58 <span class="am-pm">AM</span></div>
+        <div class="time"><small></small></div>
       </div>
-      <div class="city">
+      <div class="city" id="vancouver">
         <div class="city-date">
           <h2>Vancouver</h2>
           <div class="date">15th August 2024</div>
         </div>
-        <div class="time">1:58 <span class="am-pm">AM</span></div>
-      </div>
-      <div class="city">
-        <div class="city-date">
-          <h2>Adelaide</h2>
-          <div class="date">15th August 2024</div>
-        </div>
-        <div class="time">1:58 <span class="am-pm">AM</span></div>
+        <div class="time">1:58 <small>AM</small></div>
       </div>
     </div>
     <footer class="signature">
