--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
   <body>
     <div class="wrapper">
       <h1>World Clock</h1>
-      <select name="" id="">
+      <select name="cityselect" id="cityselect">
         <option value="">Select a city</option>
-        <option value="london">London</option>
-        <option value="vancouver">Vancouver</option>
-        <option value="adelaide">Adelaide</option>
+        <option value="Europe/London">London</option>
+        <option value="America/Vancouver">Vancouver</option>
+        <option value="Australia/Adelaide">Adelaide</option>
       </select>
-      <div class="city" id="london">
-        <div class="city-date">
-          <h2>London</h2>
-          <div class="date"></div>
+      <div class="cities">
+        <div class="city" id="london">
+          <div class="city-date">
+            <h2>London</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small></small></div>
         </div>
-        <div class="time"><small></small></div>
-      </div>
-      <div class="city" id="vancouver">
-        <div class="city-date">
-          <h2>Vancouver</h2>
-          <div class="date">15th August 2024</div>
+        <div class="city" id="vancouver">
+          <div class="city-date">
+            <h2>Vancouver</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"><small></small></div>
         </div>
-        <div class="time">1:58 <small>AM</small></div>
       </div>
     </div>
     <footer class="signature">
