--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
       <select name="cityselect" id="cityselect">
         <option value="">Select a city</option>
         <option value="current">Current location</option>
-        <option value="Europe/London">London</option>
-        <option value="America/Vancouver">Vancouver</option>
         <option value="Australia/Adelaide">Adelaide</option>
+        <option value="Europe/London">London</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="America/Vancouver">Vancouver</option>
       </select>
       <div class="city" id="city">
         <div class="city-info" id="london">
