Playing with styling

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>World Clock</title>
   </head>
   <body>
+    <h1>World Clocks</h1>
     <div class="wrapper">
-      <h1>World Clock</h1>
       <select name="cityselect" id="cityselect">
         <option value="">Select a city</option>
         <option value="current">Current location</option>
