--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clocks</h1>
     <div class="wrapper">
       <select name="cityselect" id="cityselect">
         <option value="">Select a city</option>
@@ -20,27 +19,14 @@
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="America/Vancouver">Vancouver</option>
       </select>
+      <div class="selected" id="selected"></div>
       <div class="city" id="city">
         <div class="city-info" id="london">
           <div class="city-name">
             <h2>London</h2>
-            <div class="date" id="date"></div>
           </div>
           <div class="time" id="time"><small> </small></div>
-        </div>
-        <div class="city-info" id="vancouver">
-          <div class="city-name">
-            <h2>Vancouver</h2>
-            <div class="date" id="date"></div>
-          </div>
-          <div class="time" id="time"><small> </small></div>
-        </div>
-        <div class="city-info" id="adelaide">
-          <div class="city-name">
-            <h2>Adelaide</h2>
-            <div class="date" id="date"></div>
-          </div>
-          <div class="time" id="time"><small> </small></div>
+          <div class="date" id="date"></div>
         </div>
       </div>
     </div>
