Updated initial city to current location and updated updateCity function to update each second

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       </select>
       <div class="selected" id="selected"></div>
       <div class="city" id="city">
-        <div class="city-info" id="london">
-          <div class="city-name">
-            <h2>London</h2>
+        <div class="city-info" id="location">
+          <div class="city-name" id="cityname">
+            <h2></h2>
           </div>
-          <div class="time" id="time"><small> </small></div>
+          <div class="time" id="time"></div>
           <div class="date" id="date"></div>
         </div>
       </div>
