--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
         <option value="">Select a city</option>
         <option value="current">Current location</option>
         <option value="Australia/Adelaide">Adelaide</option>
+        <option value="Asia/Colombo">Colombo</option>
+        <option value="Europe/Copenhagen">Copenhagen</option>
+        <option value="Asia/Jakarta">Jakarta</option>
         <option value="Europe/London">London</option>
         <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="America/New_York">New York</option>
+        <option value="Atlantic/Reykjavik">Reykjavik</option>
+        <option value="Europe/Rome">Rome</option>
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="America/Vancouver">Vancouver</option>
       </select>
